# shackett-utils

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
src/shackett_utils/: __init__.py
src/shackett_utils/applications/: __init__.py  constants.py  forny_etl.py  forny_imputation.py
src/shackett_utils/blog/: __init__.py  html_utils.py
src/shackett_utils/eda/: __init__.py
src/shackett_utils/genomics/: __init__.py  adata_processing.py  adata_regression.py  adata_utils.py  constants.py  mdata_eda.py  mdata_factor_analysis.py  mdata_utils.py  mudata_utils.py
src/shackett_utils/statistics/: __init__.py  constants.py  hypothesis_testing.py  model_fitting.py  multi_model_fitting.py  qvalue.py  stats_viz.py  transform.py  utils.py  viz.py
src/shackett_utils/utils/: _lazy.py  decorators.py  pd_utils.py  time.py
src/tests/: conftest.py
src/tests/blog/: test_blog_html_utils.py
src/tests/genomics/: test_adata_processing.py  test_adata_regression.py  test_mdata_factor_analysis.py
src/tests/statistics/: test_model_fitting.py  test_multi_model_fitting.py  test_qvalue.py  test_statistics_hypothesis_testing.py  test_stats_viz.py  test_transform.py  test_utils.py
src/tests/statistics/data/: qvalue_r_results.csv
src/tests/utils/: test_utils_pd_utils.py
